# FunctionalRust

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
RxRust/: Cargo.toml
RxRust/src/: main.rs
SQUICD/: Cargo.toml  README.md
SQUICD/src/: client.rs  common.rs  dsl.rs  lib.rs  main.rs  server.rs
actix/: Cargo.toml
actix/src/: actix_server.rs  actix_web_server.rs  main.rs
actix/static/: index.html
actor_model/: Cargo.toml
actor_model/src/: main.rs
ai_api_integration/: Cargo.toml  README.md  index.html
ai_api_integration/pkg/: README.md  ai_api_integration.d.ts  ai_api_integration.js  ai_api_integration_bg.wasm  ai_api_integration_bg.wasm.d.ts  package.json
ai_api_integration/src/: lib.rs  main.rs
ai_hello_world_model/: Cargo.toml  README.md  hello_rust.csv
ai_hello_world_model/src/: main.rs
architect/src/: circuit_breaker.rs
architecture/: Cargo.toml
architecture/src/: circuit_breaker.rs  main.rs
dragon_ball/: Cargo.toml  README.md
dragon_ball/src/: main.rs
dynamic_loading/: Cargo.toml
dynamic_loading/src/: main.rs
dynamic_loading_contract/: Cargo.toml
dynamic_loading_contract/src/: lib.rs
dynamic_loading_plugin/: Cargo.toml
dynamic_loading_plugin/src/: lib.rs
game_3d/: Cargo.toml
game_3d/src/: board.rs  director.rs  main.rs  player.rs
games/: Cargo.toml
games/src/: main.rs
golden_axe/: Cargo.toml  README.md
golden_axe/src/: main.rs
goose/: Cargo.toml
goose/src/: goose_load_test.rs  main.rs  mock_http_server.rs
kafka/: Cargo.toml
kafka/src/: kafka_consumer.rs  kafka_producer.rs  main.rs
kds-feature/: Cargo.toml  README.md
kds-feature/src/: main.rs
monkey_island/: Cargo.toml  README.md
monkey_island/src/: main.rs
patterns/: Cargo.toml  README.md
patterns/src/: builder.rs  composite.rs  factory.rs  main.rs  singleton.rs
patterns/src/behavioral/: chain_of_responsibility.rs  memento.rs  mod.rs  strategy.rs
patterns/src/creational/: builder.rs  factory.rs  mod.rs  singleton.rs
patterns/src/structural/: composite.rs  decorator.rs  facade.rs  mod.rs
physics_engine/: Cargo.toml
physics_engine/src/: ball.rs  launcher.rs  main.rs  walls.rs
quiche-feature/: Cargo.toml  README.md  cert.crt  cert.key
red_panda/: Cargo.toml
red_panda/resources/: uuid.txt
red_panda/src/: red_panda_consumer.rs  red_panda_producer.rs
red_panda_benchmark/: Cargo.toml  README.md
red_panda_benchmark/src/: consume_load_test.rs  produce_consume_load_test.rs  produce_load_test.rs  red_panda_load_test.rs  red_panda_proxy_server.rs
rust_ai_dsl/: Cargo.toml
rust_ai_dsl/src/: main.rs
rust_ai_model/: Cargo.toml
rust_ai_model/src/: main.rs
rust_chain/: Cargo.toml
rust_chain/src/: main.rs
rust_io/: Cargo.toml  README.md
rust_io/src/: lib.rs
src/: async_programming.rs  channels_feature.rs  collection.rs  effect_system.rs  extension_method.rs  extension_methods.rs  functions.rs  main.rs  monad.rs  try_monad.rs  type_classes.rs
src/features/: async_programming.rs  channels_feature.rs  collection.rs  create_macros.rs  dependency_injection.rs  do_notation_style.rs  effect_system.rs  either_monad.rs  enum_type.rs  extension_method.rs  functions.rs  lens.rs  memory_management.rs  mod.rs  monad.rs  new_types.rs  pattern_matching.rs  promise.rs  race_futures.rs  rust_io.rs  smart_pointer.rs  try_monad.rs  union_type.rs
street_fighter/: Cargo.toml  README.md
street_fighter/src/: main.rs
street_of_rage/: Cargo.toml  README.md
street_of_rage/src/: main.rs
test_container/: Cargo.toml
test_container/src/: main.rs
tokio/: Cargo.toml  build.rs
tokio/proto/: grpc_service.proto
tokio/src/: main.rs  rust_io_impl.rs  tokio_async.rs  tokio_green_thread.rs  tokio_grpc_client.rs  tokio_grpc_server.rs  tokio_http_hyper.rs  tokio_select.rs
