[package]
name = "SQUICD"
version = "0.1.1"
authors = ["politrons"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Squicd is a Domain-Specific Language (DSL) in Rust designed to simplify the creation of QUIC-based servers and clients for message passing."
repository = "https://github.com/politrons/FunctionalRust/tree/main/SQUICD"
homepage = "https://github.com/politrons/FunctionalRust/tree/main/SQUICD"
readme = "README.md"

[dependencies]
quiche ="0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"      # For CBOR serialization
flate2 = "1.0"           # For compression
ring = "0.17.8"
url = "2.5.2"
mio = { version = "0.8", features = ["net", "os-poll"] }
log = "0.4.22"
rand = "0.9.0-alpha.2"
env_logger = "0.11.5"

[[bin]]
name = "client"
path = "src/bin/client_main.rs"
