[package]
name = "ai_api_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
web-sys = { version = "0.3.70", features = ["Window", "Request", "Response", "RequestInit", "RequestMode","Headers", "console"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
