[package]
name = "dragon_ball"
version = "0.1.0"
edition = "2021"
description="Dragon ball Z Fight game"
license="Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.11.0"
bevy_audio = "0.11.0"
rand = "0.8"
lazy_static = "1.4.0"