[package]
name = "FunctionalRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose="0.17.0"
goose-eggs = "0.5.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }