[package]
name = "red_panda_benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "red_panda_proxy_server"
path = "src/red_panda_proxy_server.rs"

[[bin]]
name = "produce_load_test"
path = "src/produce_load_test.rs"

[[bin]]
name = "produce_consume_load_test"
path = "src/produce_consume_load_test.rs"

[dependencies]
uuid = { version = "1.4.0", features = ["serde", "v4"] }
rdkafka = "0.25.0"
goose="0.17.0"
goose-eggs = "0.5.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }