[package]
name = "FunctionalRust"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/tokio_grpc_server.rs"

#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "helloworld-client"
#path = "src/client.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
mini-redis = "0.4"
futures = "0.3"
rand = "0.8.5"
tonic = "0.9"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"